--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ p {
 
 .benefits {
     margin-right: 20px;
+    margin-bottom: 10px;
     padding: 20px;
     clear: both;
     float: right;
@@ -84,6 +85,7 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    display: block;
 }
 
 .benefit-lead {
@@ -193,6 +195,7 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    background-color: #2a607c;
 }
 
 .footer h2 {
